docs(swagger): update deployment swagger response docs
