# server/docs/swagger.yaml
@@ -113,6 +113,31 @@ definitions:
       updated_at:
         type: string
     type: object
+  res.EventRes:
+    properties:
+      created_at:
+        type: string
+      deployment_id:
+        type: string
+      event_log_file_url:
+        type: string
+      id:
+        type: string
+      reason:
+        type: string
+      status:
+        type: string
+      title:
+        type: string
+      triggered_by:
+        type: string
+      triggered_value:
+        type: string
+      type:
+        type: string
+      updated_at:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -171,8 +196,6 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
         "201":
           description: Created
           schema:
@@ -288,6 +311,15 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/api_response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/res.EventRes'
+                  type: array
+              type: object
       summary: Deployment Events
       tags:
       - Deployments
@@ -375,6 +407,13 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/api_response.Response'
+            - properties:
+                data:
+                  type: integer
+              type: object
       summary: Check Deploying state Deployments
       tags:
       - Deployments
@@ -387,6 +426,13 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/api_response.Response'
+            - properties:
+                data:
+                  type: integer
+              type: object
       summary: Check Stopped Deployments
       tags:
       - Deployments
